--- a/src/hw03/q03.html
+++ b/src/hw03/q03.html
@@ -7,7 +7,9 @@
 </head>
 <body>
   <h1> DOM </h1>
+  <a href="https://www.google.com" target="_blank"> Google </a>
   <div id="root"></div>
   <script src="q03.js"></script>
+  <script src="../../main.js"></script>
 </body>
 </html>
